--- a/.github/workflows/update_price.yml
+++ b/.github/workflows/update_price.yml
@@ -1,28 +1,37 @@
-name: Update Doge Price
+name: Update Crypto Price
 on:
   schedule:
     - cron: '0 * * * *'
-  workflow_dispatch: # run it manually
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+
       - name: Install dependencies
-        run: pip install finnhub websocket python-dotenv
-      - name: Run script
+        run: |
+          pip install finnhub websocket-client python-dotenv
+
+      - name: Run Doge Script
         env:
           FINNHUB_API_KEY: ${{ secrets.FINNHUB_API_KEY }}
         run: python main.py
+
       - name: Commit and Push changes
         run: |
-          git config --global user.name "GitHub Action"
-          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action Bot"
+          git config --global user.email "actions@github.com"
           git add crypto.json
-          git commit -m "Update Doge price" || exit 0
+          # Only commit if the file actually changed
+          git commit -m "Automated Doge price update" || echo "No changes to commit"
           git push
