--- a/.github/workflows/update_price.yml
+++ b/.github/workflows/update_price.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Action Bot"
           git config --global user.email "actions@github.com"
-          git add crypto.json
-          # Only commit if the file actually changed
+          # The -f (force) ensures it's added even if git is being stubborn
+          git add -f crypto.json
           git commit -m "Automated Doge price update" || echo "No changes to commit"
           git push
