--- a/.github/workflows/update_price.yml
+++ b/.github/workflows/update_price.yml
@@ -36,5 +36,5 @@ jobs:
           git config --global user.email "actions@github.com"
           # The -f (force) ensures it's added even if git is being stubborn
           git add -f crypto.json
-          git commit -m "Automated Doge price update" || echo "No changes to commit"
+          git commit -m "Automated crypto price update" || echo "No changes to commit"
           git push
