--- a/.github/workflows/update_price.yml
+++ b/.github/workflows/update_price.yml
@@ -1,7 +1,7 @@
 name: Update Crypto Price
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '* * * * *'
   workflow_dispatch:
 
 permissions:
